--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.564.0",
     "motion": "^12.34.0",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
     "react-router": "^7.13.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
